--- a/next-portfolio/my-portfolio/app/globals.css
+++ b/next-portfolio/my-portfolio/app/globals.css
@@ -20,3 +20,106 @@ body {
 .flip-card-back {
     transform: rotateY(180deg);
 }
+
+/*-------------------------------------------------------------------------------------------------------*/
+/*   Contact Pagina Stijl Start  */
+/*-------------------------------------------------------------------------------------------------------*/
+
+:root {
+    --primary : #53C0D7;
+    --secondary : #091126;
+}
+
+.body-contactpage {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(145deg, var(--secondary), var(--primary));
+
+}
+
+.contact{
+    height: 70vh;
+    width: 75vw;
+    display: flex;
+    overflow: hidden;
+    box-shadow: 0.2rem .5rem #0006;
+    border-radius: 1rem;
+}
+
+.map-contact, .form {
+    width: 50%;
+    height: 100%;
+}
+
+.map-contact iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.form{
+    position: relative;
+    background-color: var(--secondary);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.form h1 {
+    color: #fff;
+    font: 500 1.8rem sans-serif;
+    padding: 0 2rem;
+
+}
+
+.form form {
+    padding: 0 2rem;
+}
+
+.form input, .form textarea {
+    width: 100%;
+    padding: 1rem;
+    border: .08rem solid var(--primary);
+    background-color: unset;
+    border-radius: 2rem;
+    color: #fff;
+    font-size: 1rem;
+}
+
+.form input:not(:first-child) , .form textarea, .form button {
+    margin-top: .8rem;
+}
+
+.form textarea{
+    height: 6rem;
+    resize: none;
+}
+
+.form button {
+    background-color: var(--primary);
+    padding: 1rem 2rem;
+    color: #fff;
+    border-radius: 2rem;
+    border: none;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 690px) {
+    .form::before{
+        display: none;
+
+    }
+    .map-contact , .map-contact iframe {
+        display: none;
+    }
+
+    .form {
+        width: 100%;
+    }
+}
+
+/*-------------------------------------------------------------------------------------------------------*/
+/*   Contact Pagina Stijl End    */
+/*-------------------------------------------------------------------------------------------------------*/
+
