--- a/next-portfolio/my-portfolio/app/globals.css
+++ b/next-portfolio/my-portfolio/app/globals.css
@@ -26,7 +26,7 @@ body {
 /*-------------------------------------------------------------------------------------------------------*/
 
 :root {
-    --primary : #53C0D7;
+    --primary : #172554;
     --secondary : #091126;
 }
 
@@ -36,7 +36,6 @@ body {
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(145deg, var(--secondary), var(--primary));
-
 }
 
 .contact{
